--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script type="text/javascript" src="hipotenuza.js"></script>
+    <script type="text/javascript" src="text.js"></script>
   </head>
   <body>
     <p>Hello everyone, I`m lerning JS!!!&#41;</p>
