--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script type="text/javascript" src="index_mass.js"></script>
+    <script type="text/javascript" src="text.js"></script>
   </head>
   <body>
     <p>Hello everyone, I`m lerning JS!!!&#41;</p>
-    <img src="../images/index_of_mass.png" alt="index of body mass" />
+    <!--<img src="../images/index_of_mass.png" alt="index of body mass" />-->
   </body>
 </html>
