--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -23,9 +23,9 @@
         <li>Parrot</li>
       </ol>
     </div>
-    <script>
+    <!--<script>
       let birds = querySelector(".output");
       birds.backgroundColor.red;
-    </script>
+    </script>-->
   </body>
 </html>
