--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lerning DOM JS</title>
-    <script type="text/javascript" src="../code js/text.js"></script>
+    <script type="text/javascript" src="../code_js/text.js"></script>
     <link rel="stylesheet" href="../css/dom.css" />
   </head>
   <body>
     <h1>Lerning DOM(document object model)</h1>
-    <p>Hello everyone, I`m lerning JS!!!&#41;</p>
+    <p class="output">Hello everyone, I`m lerning JS!!!&#41;</p>
     <img
       src="../../images/favorite-2_th.jpg"
       alt="Phazan looks to us"
       title="Phazan it`s beautifull navy blue bird"
     />
-    <div class="output">
+    <div>
       <ol>
         <li>Phazan</li>
         <li>Crown</li>
@@ -23,9 +23,10 @@
         <li>Parrot</li>
       </ol>
     </div>
-    <!--<script>
-      let birds = querySelector(".output");
-      birds.backgroundColor.red;
-    </script>-->
+    <script>
+      //let birds = querySelector("div.output");
+      //birds.backgroundColor.red;
+      console.log("Hello!!!");
+    </script>
   </body>
 </html>
