--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -14,7 +14,7 @@
       alt="Phazan looks to us"
       title="Phazan it`s beautifull navy blue bird"
     />
-    <div>
+    <div class="birds">
       <ol>
         <li>Phazan</li>
         <li>Crown</li>
