--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/dom.css" />
   </head>
   <body>
-    <h1>Lerning DOM(document object model)</h1>
+    <h1 id="purpose">Lerning DOM(document object model)</h1>
     <p class="output">Hello everyone, I`m lerning JS!!!&#41;</p>
     <img
       src="../../images/favorite-2_th.jpg"
