--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -22,6 +22,6 @@
         <li>Parrot</li>
       </ol>
     </div>
-    <script type="text/javascript" src="../code_js/text.js"></script>
+    <script type="text/javascript" src="../code_js/GuessNumber.js"></script>
   </body>
 </html>
