create changeColor event

--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Hello</h1>
     <p class="doSomething">Hello everyone, I`m lerning JS!!!&#41;</p>
+    <p class="doSomething">That web-page about nothing</p>
     <div><button class="output">Click me!</button></div>
     <img
       src="../../images/favorite-2_th.jpg"
@@ -22,6 +23,7 @@
         <li>Squirrel</li>
         <li>Parrot</li>
       </ul>
+      <button id="push">Push it!</button>
     </div>
     <script type="text/javascript" src="../code_js/text.js"></script>
   </body>
