create list of birds

--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -18,10 +18,10 @@
     />
     <div class="birds">
       <ul type="disk">
-        <li>Phazan</li>
-        <li>Crown</li>
-        <li>Squirrel</li>
-        <li>Parrot</li>
+        <li class="bird">Phazan</li>
+        <li class="bird1">Crown</li>
+        <li class="bird2">Swallow</li>
+        <li class="bird3">Parrot</li>
       </ul>
       <button id="push">Push it!</button>
     </div>
