add random gradient background to body

--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/dom.css" />
   </head>
   <body>
+    <header>
+      <nav><p id="navBar"></p></nav>
+    </header>
     <h1>Hello</h1>
     <p class="doSomething">Hello everyone, I`m lerning JS!!!&#41;</p>
     <p class="doSomething">That web-page about nothing</p>
@@ -23,8 +26,9 @@
         <li class="bird2">Swallow</li>
         <li class="bird3">Parrot</li>
       </ul>
-      <button id="push">Push it!</button>
     </div>
+    <button id="push">Push it!</button>
+    <div class="nameSpaces"></div>
     <script type="text/javascript" src="../code_js/text.js"></script>
   </body>
 </html>
