cretae table for add to perrson

--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -21,14 +21,34 @@
     />
     <div class="birds">
       <ul type="disk">
-        <li class="bird">Phazan</li>
+        <li class="bird">Peackok</li>
         <li class="bird1">Crown</li>
         <li class="bird2">Swallow</li>
         <li class="bird3">Parrot</li>
       </ul>
     </div>
     <button id="push">Push it!</button>
-    <div class="nameSpaces"></div>
+    <table>
+      <caption>
+        Pretty names of different people:
+      </caption>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Number</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="personName"></tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th id="quantity">Quantity people:</th>
+          <th></th>
+        </tr>
+      </tfoot>
+    </table>
+    <button id="addName">Add person</button>
     <script type="text/javascript" src="../code_js/text.js"></script>
   </body>
 </html>
