maket page in CSS

--- a/html_pages/index.html
+++ b/html_pages/index.html
@@ -21,13 +21,19 @@
     />
     <div class="birds">
       <ul type="disk">
-        <li class="bird">Peackok</li>
+        <li class="bird">Peacock</li>
         <li class="bird1">Crown</li>
         <li class="bird2">Swallow</li>
         <li class="bird3">Parrot</li>
       </ul>
     </div>
     <button id="push">Push it!</button>
+    <div id="flexBlock">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+    </div>
     <table>
       <caption>
         Pretty names of different people:
